feat(domain): add statistics
