# domain-service/src/main/java/ru/itmo/domain/service/DomainStatsService.java
@@ -1,0 +1,8 @@
+package ru.itmo.domain.service;
+
+import ru.itmo.domain.generated.model.DomainStats;
+
+public interface DomainStatsService {
+
+    DomainStats getDomainStats();
+}
