# domain-service/src/main/java/ru/itmo/domain/service/impl/DomainStatsServiceImpl.java
@@ -1,0 +1,25 @@
+package ru.itmo.domain.service.impl;
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import ru.itmo.domain.generated.model.DomainStats;
+import ru.itmo.domain.repository.DomainRepository;
+import ru.itmo.domain.service.DomainStatsService;
+
+@Service
+@RequiredArgsConstructor
+public class DomainStatsServiceImpl implements DomainStatsService {
+
+    private final DomainRepository domainRepository;
+
+    @Override
+    public DomainStats getDomainStats() {
+        long activeUsers = domainRepository.countDistinctUserIds();
+        long registeredDomains = domainRepository.countRegisteredDomains();
+
+        DomainStats stats = new DomainStats();
+        stats.setActiveUsersCount(activeUsers);
+        stats.setRegisteredDomainsCount(registeredDomains);
+        return stats;
+    }
+}
